--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "angular-sanitize": "~1.3.2",
     "angular-animate": "1.2",
     "angularytics": "~0.3.0",
-    "angulartics": "~0.17.1"
+    "angulartics": "~0.17.1",
+    "angular-video-background": "~0.0.7"
   },
   "resolutions": {
     "firebase": "~2.0.4",
